--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
+    "redux": "^5.0.1",
     "sass": "^1.86.0"
   },
   "devDependencies": {
