search-bar-improvment

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.2.0",
