--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:remote": "npm run dev",
+    "dev:remote:mac": "npm run dev",
+    "dev:local": "set VITE_LOCAL=true&&vite",
+    "dev:local:mac": "export VITE_LOCAL=true && vite"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
